--- a/package.json
+++ b/package.json
@@ -1,24 +1,62 @@
 {
-  "name": "@mat-datetimepicker/fuse",
-  "version": "3.0.0-beta.0",
-  "repository": "https://github.com/kuhnroyal/mat-datetimepicker.git",
-  "author": "PL <kuhnroyal@gmail.com>",
+  "name": "mat-datetimepicker",
+  "version": "2.0.1",
   "license": "MIT",
-  "peerDependencies": {
-    "@angular/common": "^7.1.0",
-    "@angular/core": "^7.1.0"
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "start:prod": "ng serve --prod",
+    "build": "yarn build:lib && ng build",
+    "build:lib": "yarn build:lib/fuse",
+    "build:lib/fuse": "ng build fuse && copy-files-from-to projects/fuse/copy-files.json",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
   },
-  "main": "bundles/mat-datetimepicker-fuse.umd.js",
-  "module": "fesm5/mat-datetimepicker-fuse.js",
-  "es2015": "fesm2015/mat-datetimepicker-fuse.js",
-  "esm5": "esm5/mat-datetimepicker-fuse.js",
-  "esm2015": "esm2015/mat-datetimepicker-fuse.js",
-  "fesm5": "fesm5/mat-datetimepicker-fuse.js",
-  "fesm2015": "fesm2015/mat-datetimepicker-fuse.js",
-  "typings": "mat-datetimepicker-fuse.d.ts",
-  "metadata": "mat-datetimepicker-fuse.metadata.json",
-  "sideEffects": false,
+  "private": true,
   "dependencies": {
-    "tslib": "^1.9.0"
+    "@angular/animations": "~7.1.0",
+    "@angular/cdk": "~7.1.0",
+    "@angular/common": "~7.1.0",
+    "@angular/compiler": "~7.1.0",
+    "@angular/core": "~7.1.0",
+    "@angular/forms": "~7.1.0",
+    "@angular/material": "~7.1.0",
+    "@angular/material-moment-adapter": "~7.1.0",
+    "@angular/platform-browser": "~7.1.0",
+    "@angular/platform-browser-dynamic": "~7.1.0",
+    "@angular/router": "~7.1.0",
+    "copy-files-from-to": "0.2.3",
+    "core-js": "^2.5.4",
+    "hammerjs": "^2.0.8",
+    "moment": "2.23.0",
+    "rxjs": "~6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular-devkit/build-ng-packagr": "~0.11.0",
+    "@angular/cli": "~7.1.3",
+    "@angular/compiler-cli": "~7.1.0",
+    "@angular/language-service": "~7.1.0",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~4.5.0",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.1",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^4.2.0",
+    "protractor": "~5.4.0",
+    "ts-node": "~7.0.0",
+    "tsickle": ">=0.29.0",
+    "tslib": "^1.9.0",
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.6"
   }
 }
