--- a/src/fuse/package.json
+++ b/src/fuse/package.json
@@ -1,9 +1,6 @@
 {
-  "name": "@mat-datetimepicker/fuse",
-  "version": "3.0.0-beta.0",
-  "repository": "https://github.com/kuhnroyal/mat-datetimepicker.git",
-  "author": "PL <kuhnroyal@gmail.com>",
-  "license": "MIT",
+  "name": "@mdt/fuse",
+  "version": "1.0.0",
   "peerDependencies": {
     "@angular/common": "^7.1.0",
     "@angular/core": "^7.1.0"
