--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,10 +19,10 @@
       "dom"
     ],
     "paths": {
-      "@mat-datetimepicker/fuse": [
+      "@mdt/fuse": [
         "dist/fuse"
       ],
-      "@mat-datetimepicker/fuse/*": [
+      "@mdt/fuse/*": [
         "dist/fuse/*"
       ]
     }
